--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
  //$('#m').val('');
  return false;
  });
- socket.on('chat message', function(msg){
- $('#messages').append($('<li>').text(msg));
- });
+ //socket.on('chat message', function(msg){
+ //$('#messages').append($('<li>').text(msg));
+ //});
  </script>
  </body>
 </html>
