--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
  <script>
  //var socket = io();
  $('form').submit(function(){
- //socket.emit('chat message', $('#m').val());
- //$('#m').val('');
+ socket.emit('chat message', $('#m').val());
+ $('#m').val('');
  return false;
  });
  //socket.on('chat message', function(msg){
